-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8, 6.9
-
None
-
-
3c919b6d0 (dev), 4a296214d (6.9), a0e1955f7 (6.8)
When Qt is built as static also with static OpenGL ES2 libraries it fails to QEGLPlatformContext::getProcAddress.
| For Gerrit Dashboard: QTBUG-134671 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 632268,3 | Add support for using static EGL libraries on VxWorks | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 632605,2 | Add support for using static EGL libraries on VxWorks | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 632704,2 | Add support for using static EGL libraries on VxWorks | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |